--- a/MVCMuncheese/Views/Tipo_Producto/listarTipo_Producto_ENT.cshtml
+++ b/MVCMuncheese/Views/Tipo_Producto/listarTipo_Producto_ENT.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Lista</h2>
 <br />
-<h3>Tipos de productos</h3>
+<h3>Categorias</h3>
 
 <p>
     @Html.ActionLink("Nuevo", "agregarTipo_Producto_ENT")
