--- a/MVCMuncheese/Views/Ordenes/eliminarOrdenes_ENT.cshtml
+++ b/MVCMuncheese/Views/Ordenes/eliminarOrdenes_ENT.cshtml
@@ -89,7 +89,7 @@
                     data-toggle="tooltip" data-container="body" data-placement="right">
                 Eliminar
             </button> |
-            @Html.ActionLink("Atras", "listarOrdenes_ENT")
+            @Html.ActionLink("Atras", "listarOrdenes_ENT", null, new { style = "color:white;" })
         </div>
     }
 </div>
