--- a/MVCMuncheese/Views/Ordenes/eliminarOrdenes_ENT.cshtml
+++ b/MVCMuncheese/Views/Ordenes/eliminarOrdenes_ENT.cshtml
@@ -88,8 +88,10 @@
                     class="btn btn-primary" title="Eliminar registro"
                     data-toggle="tooltip" data-container="body" data-placement="right">
                 Eliminar
-            </button> |
-            @Html.ActionLink("Atras", "listarOrdenes_ENT", null, new { style = "color:white;" })
-        </div>
+            </button>
+            <div class="btn btn-primary">
+                @Html.ActionLink("Atras", "listarOrdenes_ENT", null, new { style = "color:white;" })
+            </div>
+                    </div>
     }
 </div>
