--- a/MVCMuncheese/Views/Shared/_Layout.cshtml
+++ b/MVCMuncheese/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 
         footer {
             position: absolute;
-/**/            bottom: 0;
+            bottom: 0;
 /*            width: 100%;
 */            height: 60px;
             padding-top: 15px;
