--- a/MVCMuncheese/Views/Shared/_Layout.cshtml
+++ b/MVCMuncheese/Views/Shared/_Layout.cshtml
@@ -74,6 +74,13 @@
                     @if (Convert.ToBoolean(Session["blnMantenimiento"]))
                     {
                         <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Ventas <span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li>@Html.ActionLink("Mesas", "Mesas", "Mesas")</li>
+                         </ul>
+                        </li>
+
+                        <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Mantenimiento <span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
                                 <li>@Html.ActionLink("Ingredientes", "listarIngredientes_PA", "Ingredientes")</li>
@@ -92,14 +99,14 @@
                                 <li>@Html.ActionLink("Facturas", "listarFacturas_PA", "Facturas")</li>
                             </ul>
                         </li>
-                    }
+                        }
 
 
-                    @if (Convert.ToBoolean(Session["Logueado"]))
-                    {
-                        <li>@Html.ActionLink("Salir", "cerrarSesion", "Home")</li>
-                    }
-                </ul>
+                        @if (Convert.ToBoolean(Session["Logueado"]))
+                        {
+                            <li>@Html.ActionLink("Salir", "cerrarSesion", "Home")</li>
+                        }
+                    </ul>
             </div>
         </div>
     </div>
